--- a/portifolio-react/src/components/sidebar/sidebar.css
+++ b/portifolio-react/src/components/sidebar/sidebar.css
@@ -23,6 +23,11 @@
     font-size: 1.5rem;
     color: var(--title-color);
     font-weight: var(--font-bold);
+    transition: .3s;
+}
+
+.nav__link:hover{
+    color: var(--first-color);
 }
 
 .copyright{
@@ -30,4 +35,52 @@
     font-size: var(--small-font-size);
     transform: rotate(-180deg);
     writing-mode: vertical-rl;
+}
+
+.scroll__down{
+    position: absolute;
+    bottom: 2.5rem;
+    left: 0;
+    width: 100%;
+}
+
+.home__scroll-name{
+    font-size: var(--small-font-size);
+}
+
+.mouse{
+    border: 3px solid var(--title-color);
+    display: block;
+    height: 1.6rem;
+    width: 1.25rem;
+    margin: auto;
+    border-radius: 1rem;
+    position: relative;
+}
+
+.wheel{
+    background-color: var(--title-color);
+    border-radius: 100%;
+    width: 0.30rem;
+    height: 0.30rem;
+    position: absolute;
+    top: .5rem;
+    left: 50%;
+    transform: translateX(-50%);
+    animation: ani-mouse 2s ease infinite;
+}
+
+@keyframes ani-mouse{
+    0%{
+        top: 29%;
+    }
+    15%{
+        top: 50%;
+    }
+    50%{
+        top: 50%;
+    }
+    100%{
+        top: 29%;
+    }
 }
