--- a/portifolio-react/src/index.css
+++ b/portifolio-react/src/index.css
@@ -141,18 +141,16 @@ img{
   display: inline-block;
   background-color: var(--first-color);
   font-weight: var(--font-bold);
+  transition: 0.2s all ease;
 }
 
 .btn:hover{
-  animation: button-push 0.3s linear 1;
+  border: 1px solid var(--first-color);
+  background: transparent;
+  color: var(--first-color);
 }
 
-/* Animation area */
-@keyframes button-push{
-  50%{
-    transform: scale(0.5);
-  }
-  100%{
-    transform: scale(1);
-  }
+.btn:active{
+  transform: scale(0.8);
+  transition: 0.2s all ease;
 }
