--- a/portifolio-react/src/components/home/home.css
+++ b/portifolio-react/src/components/home/home.css
@@ -41,3 +41,53 @@
     transform: translateY(-2px);
     color: var(--first-color);
 }
+
+.scroll__down{
+    position: absolute;
+    bottom: 2.5rem;
+    left: 0;
+    width: 100%;
+}
+
+.home__scroll-name{
+    font-size: var(--small-font-size);
+    color: var(--title-color);
+    font-weight: var(--font-semibold);
+}
+
+.mouse{
+    border: 3px solid var(--title-color);
+    display: block;
+    height: 1.6rem;
+    width: 1.25rem;
+    margin: auto;
+    border-radius: 1rem;
+    position: relative;
+}
+
+.wheel{
+    background-color: var(--title-color);
+    border-radius: 100%;
+    width: 0.30rem;
+    height: 0.30rem;
+    position: absolute;
+    top: .5rem;
+    left: 50%;
+    transform: translateX(-50%);
+    animation: ani-mouse 1.5s ease-in-out infinite;
+}
+
+@keyframes ani-mouse{
+    0%{
+        top: 29%;
+    }
+    15%{
+        top: 50%;
+    }
+    50%{
+        top: 50%;
+    }
+    100%{
+        top: 29%;
+    }
+}
