--- a/portifolio-react/src/components/about/about.css
+++ b/portifolio-react/src/components/about/about.css
@@ -79,10 +79,10 @@
     background-color: #3776AB;
 }
 
-.nodejs{
+/* .nodejs{
     width: 100%;
     background-color: #339933;
-}
+} */
 
 .design{
     width: 100%;
