--- a/portifolio-react/src/components/home/home.css
+++ b/portifolio-react/src/components/home/home.css
@@ -91,3 +91,9 @@
         top: 29%;
     }
 }
+
+@media screen and (max-width: 1024px){
+    .home__social-link{
+        font-size: 1.125rem;
+    }
+}
